--- a/TractorSpecs/app/model/model.html
+++ b/TractorSpecs/app/model/model.html
@@ -12,11 +12,13 @@
         <div class="row">
             <div class="span9">
 
-                <h1>{{ vm.model.make.mfgName }} {{ vm.model.modelNumber }} Specifications</h1>
+                <h1><a href="/mfg/{{ vm.model.make.mfgURL }}" title="{{ vm.model.make.mfgName }}">{{ vm.model.make.mfgName }} {{ vm.model.modelNumber }} Specifications</a></h1>
 
                 <div class="thumb1">
                     <div class="thumbnail clearfix">
-                        <figure class="img-polaroid"><img src="theme/TractorSpecs_original/images/{{ vm.model.make.mfgLogoImg }}" alt="{{ vm.model.make.mfgName }}"></figure>
+                        <a href="/mfg/{{ vm.model.make.mfgURL }}" title="{{ vm.model.make.mfgName }}">
+                            <figure class="img-polaroid"><img src="theme/TractorSpecs_original/images/{{ vm.model.make.mfgLogoImg }}" alt="{{ vm.model.make.mfgName }}"></figure>
+                        </a>
                         <!--<div class="caption">
                             <h3>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </h3>
                             <p>
@@ -57,7 +59,8 @@
         <div class="row">
             <div class="span12">
 
-                <h2>services overview 
+                <h2>
+                    services overview
                     <button data-ng-click="vm.editClick(vm.model.modelId)" class="btn btn-default">Edit</button>
                 </h2>
 
