- Fixed bugs that were preventing reviews from saving.

--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -92,7 +92,7 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="control-group">
-                                    <button type="submit" class="submit" data-ng-click="vm.addOrUpdateReview(vm.review)">Submit</button>
+                                    <a class="submit" data-ng-click="vm.addOrUpdateReview(vm.review)">Submit</a>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="control-group">
-                                    <button type="submit" class="submit">Submit</button>
+                                    <a class="submit">Submit</a>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="control-group">
-                                    <button type="submit" class="submit" data-ng-click="vm.addOrUpdateLink(vm.link)">Submit</button>
+                                    <a class="submit" data-ng-click="vm.addOrUpdateLink(vm.link)">Submit</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                         <div class="row">
                             <div class="span12">
                                 <div class="control-group">
-                                    <button type="submit" class="submit" data-ng-click="vm.addOrUpdateModelPrice(vm.modelPrice)">Submit</button>
+                                    <a class="submit" data-ng-click="vm.addOrUpdateModelPrice(vm.modelPrice)">Submit</a>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="submit">Submit</button>
+                        <a class="submit">Submit</a>
                     </form>
                 </div>
 
