- Implemented file uploading for  model images.

--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -102,7 +102,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputName">Select the file:</label>
                                     <div class="controls">
-                                        <input class="span4" type="file" id="inputName" name="name" value="Your full name:">
+                                        <input class="span4" type="file" ng-file-model="vm.modelPicture.fileModel" />
                                     </div>
                                 </div>
                             </div>
