- Fixed bug that was showing the wrong model on the specs page when the model shared a model number with the model of another brand.

--- a/TractorSpecs/app/search/search.html
+++ b/TractorSpecs/app/search/search.html
@@ -67,7 +67,7 @@
                                     <a href="" data-ng-click="vm.modelClick(model)" title="{{ model.modelNumber }}">
                                         <figure><img src="theme/EcoAgriculture/images/about06.png" alt="Binoculars"></figure>
                                         <div class="caption">
-                                            <div class="txt1">{{ model.modelNumber }}</div>
+                                            <div class="txt1">{{ model.make.mfgName }} {{ model.modelNumber }}</div>
                                             <!--<div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>-->
                                         </div>
                                     </a>
